fix vertical align

--- a/style.css
+++ b/style.css
@@ -28,24 +28,15 @@ section {
 #header{
   display:flex;
   justify-content: space-between;
+  align-items: center;
   background-color: white;
   width: 100%;
   padding: 20px;
 }
 
-#header h1{
-  display: inline;
-  vertical-align: middle;
-  height: 30px;
-}
 
-#header img{
-  display: inline;  
-  vertical-align: middle;
-}
 
 #header h1{
-
   font-size: 40px;
 }
 
